Added hello-world demo

--- a/tutorial/操作流程.md
+++ b/tutorial/操作流程.md
@@ -51,3 +51,131 @@
   $ kubectl delete -f xxx.yaml
  
 来删除。
+
+# 教程内容
+
+## 可用的资源对象类型
+
+### ReplicationController
+
+> apiVersion: v1
+> kind: ReplicationController
+
+- 第20页
+
+### Service
+
+> apiVersion: v1
+> kind: Service
+
+- 第21页
+
+可对外开放端口
+
+### Pod
+
+> apiVersion: v1
+> kind: Pod
+
+- 第30页
+
+RC本身也是Pod
+
+### ReplicaSet
+
+> apiVersion: extensions/v1beta1
+> kind: ReplicaSet
+
+- 第38页
+
+可通过集合方式实现Pod的选取
+
+### Development
+
+> apiVersion: extensions/v1beta1
+> kind: Deployment
+
+- 第39页
+
+定义与ReplicaSet类似
+
+### HorizontalPodAutoscaler
+
+> apiVersion: autoscaling/v1
+> kind: HorizontalPodAutoscaler
+
+- 第41页
+
+可根据CPU占用率自动扩容（有Pod副本数量限制）。
+除使用.yaml文件定义之外，还可以直接使用命令开启
+
+  $ kubectl autoscale deployment [image] --cpu-percent=90 --min=1 --max=10
+
+## yaml文件中对资源对象（容器副本）的设置
+
+...
+
+## Service
+
+...
+
+## Volume
+
+Kubernetes同时支持与Docker相同的Volume，也支持GlusterFS, Ceph等分布式文件系统。
+
+- 第49页
+
+定义Volume，需要先在Pod的定义中声明
+
+spec:
+
+  ...
+  
+  volumes:
+  
+  - name: datavol (任取)
+  
+    emptyDir: {} (是特定的Volume类型)
+	
+之后在定义容器时将其指向容器内的一个具体路径
+
+  containers:
+  
+  - name: app-demo (任取)
+  
+    image: app-demo
+	
+	volumeMounts:
+	
+	- mountPath: /data
+	
+	  name: datavol (与之前一致)
+
+### Volume类型
+
+- 第49页
+
+#### emptyDir
+
+初始为空的一个目录，由Kubernetes自动分配，Pod移除时目录也会被删除，主要用于存储临时数据、实现容器共享目录等
+
+#### hostPath
+
+挂载宿主机上的目录，与Docker的Volumes类似。若路径定义为/var/lib/docker目录，则可使容器内部应用直接访问Docker的文件系统
+
+#### gcePersistentDisk
+
+使用谷歌公有云的永久磁盘(Persistent Disk, PD)，类似emptyDir，但当Pod被移除时，PD仅仅被卸载而不会被删除
+
+#### awsElasticBlockStore
+
+类似gcdPersistentDisk，使用的时亚马逊云提供的EBS存储
+
+#### nfs
+
+使用NFS网络文件系统提供的共享目录存储数据
+
+#### 其他
+
+- 见第52页
+
